# a5c-murmur

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: chatbot_demo.py  debate_demo.py  redis_demo.py
src/a5c_murmur/: __init__.py  agent.py  debate.py  journal.py  schema.py
src/a5c_murmur/bus/: __init__.py  base.py  factory.py  memory.py  redis_bus.py
src/a5c_murmur/server/: __init__.py  __main__.py  app.py
src/a5c_murmur/ui/: __init__.py  routes.py
src/a5c_murmur/ui/static/: app.css
src/a5c_murmur/ui/templates/: agents.html  base.html  debate.html  debates.html  index.html
tests/: conftest.py  test_agent.py  test_budget.py  test_bus_memory.py  test_debate.py  test_journal.py  test_schema.py  test_server_and_ui.py
